...
            "state": "translated",
            "value": "默认目标语言"
          }
        }
      }
    },
    "general.uiLanguage": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Interface language"
          }
...
    },
    "language.simplifiedChinese": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Simplified Chinese"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "简体中文"
...
